# CMakeDummyLib2

./: .gitmodules  CMakeLists.txt  README.md
libsrc/libDummyLib2/: clsSample.h
